--- a/HandsOn.Api/HandsOn.Api.csproj
+++ b/HandsOn.Api/HandsOn.Api.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>b758093e-d602-46e9-abee-9386f74d97d2</UserSecretsId>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
